feat(web): 新增DataOperationError并完善模块中类的注释